- added import of existing modules (for their redesign) (mamba)
- increased size of the "mod_version" field in modulebuilder_modules table from 4 to 10 (mamba)
- refactored import to a class (mamba)
- template usage (goffy)
- add result handling (goffy)
- fixed bug in class handler creation (jjdai/goffy)

<h5>3.5.1 Beta 1   [NOT RELEASED]</h5>  Dev: XOOPS 2.5.11, PHP 7.4.25, PHP 8.0.12, PHP 8.1.0 Beta 4
 - semantic versioning (mamba)

<h5>3.05 Final   [2021-10-21]</h5>  Dev: XOOPS 2.5.11, PHP 7.4.5
<hr>
 - moved to final (goffy)
 - fixed bug in class handler creation (jjdai/goffy)
 - changed font color (jjdai/goffy)
 
<h5>3.05 RC2   [2021-10-13]</h5>  Dev: XOOPS 2.5.11, PHP 7.4.5
<hr>
 - added icon for clone (goffy)
 - added feature to clone module (mamba/goffy)

<h5>3.05 RC1   [2020-11-11]</h5>  Dev: XOOPS 2.5.11, PHP 7.4.5
<hr>
 - fixed bug with l\trim (alain/goffy)
 - implemented additional prebuilding check  (goffy)
 - cosmetics (mamba/goffy)
 - added "declare(strict_types=1);" to php file creation (goffy)
 - changed default size date/datetime field to 11 (mamba/goffy)
 - changed default chmod of upload folders to 0777 (mamba/goffy)
 - fixed lang bug in XoopsConfirm (mamba/goffy)
 - increased default size for IP field (mamba/goffy)
 - fixed lang in blocks (heyula/goffy)
 - added link in blocks (heyula/goffy)
 - fixed problem in XoopsConfirm (goffy)
 - fixed missing default values in smarty in modulebuilder itself (mamba/goffy)
 - fixed missing default values in smarty in created modules (mamba/goffy)
 - added item title to page title (heyula/goffy)
 - added counter for reads (heyula/goffy)
 - added constants for field elements types (goffy)
 - fixed bug in creation of block (heyula/goffy)
 - improved breadcrumb handling (goffy)
 - replaced index.html by index.php (goffy)
 - added replacement of tabs by 4 spaces in devtools (goffy)
 - fixed bug with unnecessary index.php files adex by index_scan (mjoel/goffy)
 - fixed bug if no permissions are used (goffy)