@@ -706,6 +706,26 @@ function modulebuilder_check_db($module)
         }
     }
 
+    // update table 'modulebuilder_settings'
+    $table   = $GLOBALS['xoopsDB']->prefix('modulebuilder_settings');
+    $field   = 'set_version';
+    $sql = "ALTER TABLE `$table` CHANGE `$field` `$field` varchar(10) NOT NULL DEFAULT '1.0';";
+    if (!$result = $GLOBALS['xoopsDB']->queryF($sql)) {
+        xoops_error($GLOBALS['xoopsDB']->error() . '<br>' . $sql);
+        $module->setErrors("Error when changing '$field' in table '$table'.");
+        $ret = false;
+    }
+
+    // update table 'modulebuilder_modules'
+    $table   = $GLOBALS['xoopsDB']->prefix('modulebuilder_modules');
+    $field   = 'mod_version';
+    $sql = "ALTER TABLE `$table` CHANGE `$field` `$field` varchar(10) NOT NULL DEFAULT '1.0';";
+    if (!$result = $GLOBALS['xoopsDB']->queryF($sql)) {
+        xoops_error($GLOBALS['xoopsDB']->error() . '<br>' . $sql);
+        $module->setErrors("Error when changing '$field' in table '$table'.");
+        $ret = false;
+    }
+
     return $ret;
 }
 
